# BDN

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeLists.txt.config  README.md  config.hpp.in
client/: CMakeLists.txt  client.hpp  fwd.hpp  main.cpp  network_client.cpp  network_client.hpp  source.cpp  source.hpp  task.cpp  task.hpp
lib/: CMakeLists.txt  packet.cpp  packet.hpp
server/: CMakeLists.txt  main.cpp
